{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "UI",
            "id": "7170b23d-38a7-44bf-9ef1-0b0c9f799604",
            "actions": [
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "34b21f85-6eb5-4f75-b947-d503f48ba258",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "8b87f6fb-b36f-42da-9960-da7829ea142b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseMove",
                    "type": "Value",
                    "id": "4586f81f-9d24-41ae-b262-b444679b1ad2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Scroll ",
                    "type": "Value",
                    "id": "d4b898a7-5209-40f2-bd0b-c77496f4ab54",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4064c5f2-dfd8-4039-96d8-b20c907cb889",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d2b4d631-c4ff-469b-9cbb-50d07b056d4d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15444bf8-d643-437d-b14c-2b5f8cf6d8fb",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68866ba4-7b5f-4fbe-87c2-c2a2f793f2be",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll ",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Gameplay",
            "id": "4dcb7412-1d8a-40b3-a1f7-38cdbbd906f1",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "0f728f06-e1b7-432d-bb93-3643a102ccbd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchCamera",
                    "type": "Value",
                    "id": "b17bea4b-63ea-4fa3-a80f-ec1f82e26499",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchDraw",
                    "type": "Value",
                    "id": "533e032c-c349-445c-860f-7c425c73f56f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "95de65e8-7211-4949-858e-6fa61ccbc736",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e71fb064-1e91-4ed2-bf16-13a3775cfd81",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c01a2b0-057a-434a-b04b-2b5582ddcb47",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDraw",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}